--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <input type="file" id="musicFile" accept=".mp3" multiple>
         </div>
     </div>
+    <div>
+        <a href="https://github.com/pufffissal">Visit my profile</a>
+    </div>
     
     <script src="script.js"></script>
 </body>
