--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Zenelejátszó</title>
+
+    <link rel="website icon" type="jpeg"
+    href="C:\Users\Lenovo\OneDrive\Képek\PFP picture">
 </head>
 <body>
     <h1>Zenelejátszó</h1>
