--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Zenelejátszó</title>
 
-    <link rel="website icon" type="jpeg"
-    href="C:\Users\Lenovo\OneDrive\Képek\PFP picture">
+    <link rel="website icon" type="url"
+    href="https://avatars.githubusercontent.com/u/139345254?v=4">
 </head>
 <body>
     <h1>Zenelejátszó</h1>
